Relocated A tag for Earthquakes page.

--- a/disaster/src/app/earthquake/earthquake.component.html
+++ b/disaster/src/app/earthquake/earthquake.component.html
@@ -48,7 +48,6 @@
         </div>
         <div class="col-5">
           <img class="center" src="../../assets/earthquake.jpg" alt="tornado">
-          <a href="https://www.earthquakecountry.org/library/StayingSafeWhereTheEarthShakes_SouthernCaliforniaCoastEdition.pdf">Staying SafeWhere The Earth Shakes Southern California Coast Edition</a>
         </div>
         <div class="col">
           <div class="max-width-1024">
@@ -143,12 +142,19 @@
             shaking
             stops.</li>
           <li>Save phone calls for emergencies.</li>
-          <li>>Once safe, monitor local news reports via battery operated radio, TV, social media, and cell phone text
+          <li>Once safe, monitor local news reports via battery operated radio, TV, social media, and cell phone text
             alerts for emergency information and instructions.</li>
           <li>Use extreme caution during post-disaster clean-up of buildings and around debris. Do not attempt to
             remove
             heavy debris by yourself. Wear protective clothing, including a long-sleeved shirt, long pants, work
             gloves, and sturdy, thick-soled shoes during clean-up.</li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 offset-md-3 centro2" style="color: black">
+        <ul>
+            <a href="https://www.earthquakecountry.org/library/StayingSafeWhereTheEarthShakes_SouthernCaliforniaCoastEdition.pdf">Staying SafeWhere The Earth Shakes Southern California Coast Edition</a>
         </ul>
       </div>
     </div>
