Added Fire Gif for 2018

--- a/disaster/src/app/fire/fire.component.html
+++ b/disaster/src/app/fire/fire.component.html
@@ -124,15 +124,16 @@
       </div>
     </div>
   </div>
-  
+
   <div>
-      <div class="row">
-          <div class="col-md-6 offset-md-3 centro" style="color: black">
-            <h3>Fires around the world for 2018</h3>
-          </div>
-        </div>
-    
-      <img class="panel-slideshow-image" src="https://eoimages.gsfc.nasa.gov/images/globalmaps/data/MOD14A1_M_FIRE/MOD14A1_M_FIRE_2018-01.JPEG" 
+    <div class="row">
+      <div class="col-md-6 offset-md-3 centro" style="color: black">
+          <h3>Fires around the world for 2018</h3>
+        <img class="center" src="../../assets/fires2018.gif" alt="fires around the world for 2018">
+      </div>
+    </div>
+
+    <img class="panel-slideshow-image" src="https://eoimages.gsfc.nasa.gov/images/globalmaps/data/MOD14A1_M_FIRE/MOD14A1_M_FIRE_2018-01.JPEG"
       alt="Global Map Fire Image 215" data-value="215">
     <img class="panel-slideshow-image" src="https://eoimages.gsfc.nasa.gov/images/globalmaps/data/MOD14A1_M_FIRE/MOD14A1_M_FIRE_2018-02.JPEG"
       alt="Global Map Fire Image 216" data-value="216">
@@ -145,7 +146,7 @@
     <img class="panel-slideshow-image" src="https://eoimages.gsfc.nasa.gov/images/globalmaps/data/MOD14A1_M_FIRE/MOD14A1_M_FIRE_2018-06.JPEG"
       alt="Global Map Fire Image 220" data-value="220">
     <img class="panel-slideshow-image" src="https://eoimages.gsfc.nasa.gov/images/globalmaps/data/MOD14A1_M_FIRE/MOD14A1_M_FIRE_2018-07.JPEG"
-      alt="Global Map Fire Image 221" data-value="221"> 
+      alt="Global Map Fire Image 221" data-value="221">
   </div>
   <div>
     <span class="range-label-middle" data-value="215">January 2018</span>
@@ -159,4 +160,3 @@
 </body>
 
 </html>
-
