--- a/disaster/src/app/bag/bag.component.html
+++ b/disaster/src/app/bag/bag.component.html
@@ -19,6 +19,7 @@
           <li class="list-group-item d-flex justify-content-between align-items-center">
               {{ each.item }}
             <span class="badge badge-primary badge-pill">{{ each.weight }}</span>
+            <button (click)='deleteItem(each._id)'>Delete</button>
           </li>
         </div>
         <!-- end of forloop -->
