--- a/disaster/src/app/earthquake/earthquake.component.html
+++ b/disaster/src/app/earthquake/earthquake.component.html
@@ -46,6 +46,7 @@
         <div class="col">
 
         </div>
+        
         <div class="col-5">
           <img class="center" src="../../assets/earthquake.jpg" alt="tornado">
         </div>
@@ -117,7 +118,8 @@
             <li>If inside, stay there until the shaking stops. DO NOT run outside.</li>
             <li>If in a vehicle, stop in a clear area that is away from buildings, trees, overpasses, underpasses, or
               utility wires.</li>
-            <li>If you are in a high-rise building, expect fire alarms and sprinklers to go off. Do not use elevators.</li>
+            <li>If you are in a high-rise building, expect fire alarms and sprinklers to go off. Do not use elevators.
+            </li>
             <li>If near slopes, cliffs, or mountains, be alert for falling rocks and landslides.</li>
           </ul>
         </div>
@@ -154,7 +156,9 @@
     <div class="row">
       <div class="col-md-6 offset-md-3 centro2" style="color: black">
         <ul>
-            <a href="https://www.earthquakecountry.org/library/StayingSafeWhereTheEarthShakes_SouthernCaliforniaCoastEdition.pdf">Staying SafeWhere The Earth Shakes Southern California Coast Edition</a>
+          <a
+            href="https://www.earthquakecountry.org/library/StayingSafeWhereTheEarthShakes_SouthernCaliforniaCoastEdition.pdf">Staying
+            SafeWhere The Earth Shakes Southern California Coast Edition</a>
         </ul>
       </div>
     </div>
@@ -163,4 +167,3 @@
 </body>
 
 </html>
-
