--- a/disaster/src/app/checklist/checklist.component.css
+++ b/disaster/src/app/checklist/checklist.component.css
@@ -4,13 +4,16 @@
     /* border: 1px solid pink;    */
 }
 .container {
-    margin-left: 200px;
+    /* margin-left: 200px; */
     max-width: 500px;
     display: inline-block;
     vertical-align: top;
 }
 .skootright {
     margin-left: 200px;
+}
+.errors {
+    color: red;
 }
 
 
