fire component css file updated

--- a/disaster/src/app/fire/fire.component.css
+++ b/disaster/src/app/fire/fire.component.css
@@ -60,5 +60,5 @@ img.panel-slideshow-image {
     margin-left: 1rem;
 }
 span.range-label-middle {
-    margin-left: 10em;
+    margin-left: .5em;
 }
